[package]
name = "android_log"
version = "0.1.2"
authors = ["Saleem Rashid <dev@saleemrashid.com>"]

repository = "https://github.com/saleemrashid/android_log-rs"

license = "MIT/Apache-2.0"
readme = "README.md"

description = """
Logger which writes to Android logging subsystem
"""

[dependencies]
log = "0.3"
android_liblog-sys = "0.1"
